Reworked (read deleted content) ABOUT -HTML ... wrapped HOME-page first image in order to make it responsive. Still haven't resolved the center position issue.

--- a/Style.css
+++ b/Style.css
@@ -107,12 +107,11 @@ li a:hover {
 .wrapper {
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	flex-flow: row wrap;
 	object-fit: cover;
-	
-	width: 75%;
-	height: 75%;
-	
+	width: 100%;
+	height: 100%;
 	border-radius: 4px;
 	background-color: hsl(0, 0%, 96%);
 }
@@ -120,13 +119,41 @@ li a:hover {
 .wrap-item1 {
 	border-radius: 0px 10px ;
 	display: flex;
+	align-self: center;
 }
 
 .wrap-item1 img {
 	width: 100%;
 	object-fit: contain;
 	border-radius: 4px;
+	align-self: center;
 }
+
+.wrapper2 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 4px;
+	background-color: hsl(0, 0%, 96%);
+}
+
+.wrap-item2 {
+	border-radius: 0px 10px ;
+	display: flex;
+	align-self: center;
+}
+
+.wrap-item2 img {
+	width: 100%;
+	object-fit: contain;
+	border-radius: 4px;
+	align-self: center;
+}
+
 
 @media all and (min-width: 800px) {
 	.flex-container {
@@ -140,7 +167,7 @@ li a:hover {
 		flex-flow: row;
 		justify-content: space-around;
 		flex-wrap: wrap;
-		object-fit: cover;
+		object-fit: contain;
 		height: 100 %;
 	}
 }
@@ -153,85 +180,8 @@ li a:hover {
 		align-content: center;
 		height: 100%;
 		margin: 10px;
+		object-fit: contain;
 	}
-}
-
-.flex-containerABOUTauthor {
-	display: -webkit-flex;
-	display: flex;	
-	-webkit-justify-content: center;
-	justify-content: center;
-	width: 100%;
-	height:125px;
-	background-color: #FFFFFF;
-	flex-flow: row;
-	justify-content: space-around;
-}
-
-.flex-itemABOUTcreator1 {
-	font-family: "Paper Cuts";
-	background-color: #FFFFFF;
-	border-color: #E14F4F;
-	flex-direction: row;
-	padding: 5px;
-	width: 25%;
-	height: 100%;
-	margin: 5px;
-}
-
-.flex-itemABOUTcreator2 {
-	font-family: "Paper Cuts";
-	background-color: #FFFFFF;
-	border-color: #E14F4F;
-	flex-direction: row;
-	padding: 5px;
-	width: 75%;
-	height: 100%;
-	margin: 5px;
-}
-
-.flex-containerABOUT {
-	flex-wrap: wrap
-	display: -webkit-flex;
-	display: flex;
-	-webkit-justify-content: center;
-	justify-content: center;
-	width: 100%;
-	height: 900px;
-	background-color: #DD4D4F;
-	flex-flow: row;
-	justify-content: space-around;
-}
-
-.flex-itemABOUT {
-	font-family: "Paper Cuts";
-	background-color: #FFFFFF;
-	border-color: #E14F4F;
-	padding: 5px;
-	width: 15%;
-	height: 100%;
-	margin: 5px;
-}
-
-.flex-containerFOOTER {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-justify-content: center;
-	justify-content: center;
-	width: 100%;
-	height:50%;
-	background-color: #FFFFFF;
-	flex-flow: row;
-	justify-content: space-around;
-}
-
-.flex-itemFOOTER {
-	background-color: #E14F4F;
-	border-color: #E14F4F;
-	padding: 5px;
-	width: 100%;
-	height: 30px;
-	opacity: 0.8;
 }
 
 .button {
